# django_template

./: .dockerignore  .env.dev.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README.zh.md  compose.yaml  logger.py  nginx.conf  pyproject.toml  website.conf
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  prestart.sh
config/: asgi.py  gunicorn.py  urls.py
config/settings/: _base.py  base.py  celery.py
scripts/: run_celery_worker.sh  start_prod_server.sh
website/: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  compose.yaml  pyproject.toml
website/.devcontainer/: Dockerfile  compose.yaml  compose.yaml.example  devcontainer.json  prestart.sh
website/config/: __init__.py  celery.py  gunicorn.py  urls.py  wsgi.py
website/config/settings/: _base.py  base.py  celery.py
website/scripts/: run_celery_beat.sh  start_dev_server.sh  start_prod_server.sh
