[project]
name = ""
version = ""
description = ""
authors = [{ name = "Nafnix", email = "nafnix@proton.me" }]
dependencies = [
    "django>=5.0.3",
    "psycopg2>=2.9.9",
    "celery[redis]>=5.3.1",
    "django-celery-beat>=2.6.0",
    "pydantic-settings>=2.2.1",
    "django-debug-toolbar>=4.3.0",
    "loguru>=0.7.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
lint = []
dev = [
    "pre-commit>=3.6.1",
    "ruff>=0.3.3",
]


[tool.ruff]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-simplify
    "SIM",
    # flake8-import-conventions: {name} should be imported as {asname}
    "ICN001",
    "ISC003",
]
ignore = ["E111", "E114", "E117"]
line-length = 120

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = false

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]

[tool.ruff.isort]
lines-after-imports = 2

[tool.ruff.lint.flake8-implicit-str-concat]
allow-multiline = false
