[project]
name = ""
version = ""
description = ""
authors = [{ name = "Nafnix", email = "nafnix@proton.me" }]
dependencies = [
    "django>=4.2",
    "pydantic[dotenv,email]<2.0",
    "psycopg2>=2.9.6",
    "celery[redis]>=5.3.1",
    "django-celery-beat>=2.5.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
lint = ["black>=23.7.0", "ruff>=0.0.280"]
dev = ["django-debug-toolbar>=4.1.0", "pre-commit>=3.3.3"]


[tool.black]
line-length = 100


[tool.ruff]
select = ["E", "F", "I", "N"]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]

[tool.ruff.isort]
lines-after-imports = 2


[tool.mypy]
plugins = ["pydantic.mypy", "mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"
